samples/_failures_safe/1761400411_a1e058_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_e42763ea.c: In function ‘main’:
./samples/SAFE/__tmp_e42763ea.c:131:25: error: expected ‘;’ at end of input
  131 |             print_matrix
      |                         ^
      |                         ;
./samples/SAFE/__tmp_e42763ea.c:131:13: error: expected declaration or statement at end of input
  131 |             print_matrix
      |             ^~~~~~~~~~~~
./samples/SAFE/__tmp_e42763ea.c:131:13: error: expected declaration or statement at end of input
